--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <!-- End Contact Form -->
 
     <!-- Start Footer -->
-    <footer class="footer">
+    <footer class="container-fluid">
         <div class="row p-3 text-center text-light">
             <div class="col-12">
                 <p>&copy;Copyright</p>
