--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- End About Me -->
 
     <!-- Start Footer -->
-    <footer class="footer">
+    <footer class="container-fluid">
         <div class="row p-3 text-center text-light">
             <div class="col-12">
                 <p>&copy;Copyright</p>
