updated responsive header nav footer

--- a/index.html
+++ b/index.html
@@ -14,23 +14,40 @@
 </head>
 <body>
 
-    <!-- Start Navbar -->
-
-    <!-- End Navbar -->
+    <!-- Header container -->
+    <header class="container-fluid p-0 m-0">
+        <!-- Header One Row -->
+        <div class="row no-gutters">
+            <!-- Header Name -->
+            <div class="col-md-2"></div>
+            <div class="col-md-2">
+                <h1 class="text-center mb-0 border-left border-right border-bottom border-dark">Hilary</h1>
+            </div>
+            <!-- Navigation Start -->
+            <div class="col-md-8" role="navigation">
+                <nav class="mb-0">
+                    <ul class="nav justify-content-md-end justify-content-center">
+                        <li class="nav-item border-right border-dark"><a class="nav-link" href="#">About</a></li>
+                        <li class="nav-item border-right border-dark"><a class="nav-link" href="#">Portfolio</a></li>
+                        <li class="nav-item border-dark"><a class="nav-link active" href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div> <!-- Navigation End -->
+        </div> <!-- Row Close -->
+    </header> <!-- Header Close-->
 
     <!-- Start About Me -->
 
     <!-- End About Me -->
 
     <!-- Start Footer -->
-    <footer class="container-fluid">
-        <div class="row p-3 text-center text-light">
+    <footer class="container-fluid fixed-bottom p-0">
+        <div class="row p-2 text-center">
             <div class="col-12">
-                <p>&copy;Copyright</p>
+                <p class="mb-0">&copy;Copyright</p>
             </div>
         </div>
     </footer>
-    <!-- <p> seems to be giving weird margins but don't know how to get rid of it. On mobile view, it is a white bar on the side rather than full width color. -->
     <!-- End Footer -->
 
     <!-- Optional JavaScript -->
