--- a/portfolio.html
+++ b/portfolio.html
@@ -13,19 +13,37 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <!-- Start Navbar -->
-
-    <!-- End Navbar -->
+    <!-- Header container -->
+    <header class="container-fluid p-0 m-0">
+        <!-- Header One Row -->
+        <div class="row no-gutters">
+            <!-- Header Name -->
+            <div class="col-md-2"></div>
+            <div class="col-md-2">
+                <h1 class="text-center mb-0 border-left border-right border-bottom border-dark">Hilary</h1>
+            </div>
+            <!-- Navigation Start -->
+            <div class="col-md-8" role="navigation">
+                <nav class="mb-0">
+                    <ul class="nav justify-content-md-end justify-content-center">
+                        <li class="nav-item border-right border-dark"><a class="nav-link" href="#">About</a></li>
+                        <li class="nav-item border-right border-dark"><a class="nav-link" href="#">Portfolio</a></li>
+                        <li class="nav-item border-dark"><a class="nav-link active" href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div> <!-- Navigation End -->
+        </div> <!-- Row Close -->
+    </header> <!-- Header Close-->
 
     <!-- Start Portfolio -->
 
     <!-- End Portfolio -->
 
     <!-- Start Footer -->
-    <footer class="footer">
-        <div class="row p-3 text-center text-light">
+    <footer class="container-fluid fixed-bottom p-0">
+        <div class="row p-2 text-center">
             <div class="col-12">
-                <p>&copy;Copyright</p>
+                <p class="mb-0">&copy;Copyright</p>
             </div>
         </div>
     </footer>
