--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,31 @@
     </header> <!-- Header Close-->
 
     <!-- Start Contact Form -->
-    <div class="container">
+    <div class="container mt-5">
         <div class="row">
-            <div class="col-12">
-
+            <div class="col-md-8">
+                <h2 class="border-bottom border-dark p-2">Contact Hilary!</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8">
+                <form class="p-2 mb-3">
+                <!-- Use the appropriate type attribute on all inputs eg email, number, etc 
+                form-control class - inputs, select, textarea
+                form-control-lg sizing-->
+                    <p>
+                        <label for="input">Name</label></br>
+                        <input type="text" id="input" placeholder="Enter your name" class="w-100">
+                    </p>
+                    <p>
+                        <label for="input">Email</label></br>
+                        <input type="text" id="input" placeholder="Enter your email" class="w-100">
+                    </p>
+                    <p>
+                        <label for="textarea">Message</label></br>
+                        <textarea id="textarea" rows="10" class="w-100"></textarea>
+                    </p>
+                </form>
             </div>
         </div>
     </div>
