update nav links

--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@
             <div class="col-md-8" role="navigation">
                 <nav class="mb-0">
                     <ul class="nav justify-content-md-end justify-content-center">
-                        <li class="nav-item border-right border-dark"><a class="nav-link" href="#">About</a></li>
-                        <li class="nav-item border-right border-dark"><a class="nav-link" href="#">Portfolio</a></li>
-                        <li class="nav-item border-dark mr-10"><a class="nav-link active" href="#">Contact</a></li>
+                        <li class="nav-item border-right border-dark"><a class="nav-link" href="index.html">About</a></li>
+                        <li class="nav-item border-right border-dark"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                        <li class="nav-item border-dark mr-10"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div> <!-- Navigation End -->
