--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <!-- Local CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
+<body class="mb-5">
     <!-- Header container -->
     <header class="container-fluid p-0 m-0">
         <!-- Header One Row -->
