update contract form style and css

--- a/contact.html
+++ b/contact.html
@@ -45,12 +45,12 @@
             <!-- Contact Form Header -->
             <div class="row">
                 <div class="col-md-8">
-                    <h2 class="border-bottom border-dark p-2">Send me a message!</h2>
+                    <h2 class="border-bottom border-dark p-2">Contact</h2>
                 </div>
             </div>
             <!-- Form Begins -->
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8 contact-bg rounded-lg">
                     <form class="p-2">
                         <div class="form-group">
                             <label for="nameinput">Name</label></br>
