--- a/contact.html
+++ b/contact.html
@@ -57,11 +57,11 @@
                         </div>
                         <div class="form-group">
                             <label for="emailinput">Email</label></br>
-                            <input type="email" class="form-control w-100" id="emailinput" placeholder="Your email">
+                            <input type="email" class="form-control" id="emailinput" placeholder="Your email">
                         </div>
                         <div class="form-group">
                             <label for="messagetextarea">Message</label></br>
-                            <textarea class="form-control w-100" id="messagetextarea" placeholder="Your message"
+                            <textarea class="form-control" id="messagetextarea" placeholder="Your message"
                                 rows="6"></textarea>
                         </div>
                         <button class="btn btn-primary mb-3" type="submit">Send it!</button>
