updating about me page

--- a/index.html
+++ b/index.html
@@ -32,12 +32,40 @@
                         <li class="nav-item border-dark mr-10"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
-            </div> <!-- Navigation End -->
-        </div> <!-- Row Close -->
-    </header> <!-- Header Close-->
+            </div> 
+        </div> 
+    </header> 
 
-    <!-- Start About Me -->
-
+    <!-- Start Container for About Me -->
+    <main>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-12 contact-bg rounded-lg">
+                    <h2 class="mt-2">About me</h2>
+                    <hr>
+                    <!-- Picture and About me text -->
+                    <div class="row">
+                        <!-- Picture -->
+                        <div class="col-md-6 d-flex justify-content-center align-items-center">
+                            <p>Test</p>
+                        </div>
+                        <!-- About me text -->
+                        <div class="col-md-6">
+                            
+                            <p class="text-justify">
+                                Since 2007, I have worked for  athenahealth, inc., a SaaS healthcare technology company. My primary focus has been maintenance of athenahealth's proprietary billing engine in addition to analytics and process efficiencies.
+                                </br></br>
+                                In 2018, I became a 200-hour registered yoga teacher with Yoga Alliance. I most enjoy guiding new students on their own yoga journey.
+                                </br></br>
+                                When not working or practicing yoga, you will likely find me glued to a book or catching up on the latest royal-watching news.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- About me ends -->
+            </div>
+        </div>
+    </main>
     <!-- End About Me -->
 
     <!-- Start Footer -->
