--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,8 @@
         <!-- Header One Row -->
         <div class="row no-gutters">
             <!-- Header Name -->
-            <div class="col-md-2">
-            </div>
-            <div class="col-md-2">
-                <h1 class="text-center mb-0 border-left border-right border-dark">Hilary</h1>
+            <div class="col-md-4">
+                <h1 class="text-center mb-0 border-left border-right border-dark">Hilary Ferraro</h1>
             </div>
             <!-- Navigation Start -->
             <div class="col-md-8" role="navigation">
