--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <!-- Header One Row -->
         <div class="row no-gutters">
             <!-- Header Name -->
-            <div class="col-md-2"></div>
-            <div class="col-md-2">
-                <h1 class="text-center mb-0 border-left border-right border-bottom border-dark">Hilary</h1>
+            <div class="col-md-4">
+                <h1 class="text-center mb-0 border-left border-right border-bottom border-dark">Hilary Ferraro</h1>
             </div>
             <!-- Navigation Start -->
             <div class="col-md-8" role="navigation">
@@ -47,7 +46,8 @@
                     <div class="row">
                         <!-- Picture -->
                         <div class="col-md-6 d-flex justify-content-center align-items-center">
-                            <p>Test</p>
+                            <!-- <p>Test</p> -->
+                            <img src="./assets/images/.JPG" class="img-fluid rounded-lg" alt="Hilary at the Taj Mahal">
                         </div>
                         <!-- About me text -->
                         <div class="col-md-6">
