--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,7 @@
         <!-- Header One Row -->
         <div class="row no-gutters">
             <!-- Header Name -->
-            <div class="col-md-2"></div>
-            <div class="col-md-2">
+            <div class="col-md-4">
                 <h1 class="text-center mb-0 border-left border-right border-bottom border-dark">Hilary</h1>
             </div>
             <!-- Navigation Start -->
@@ -31,9 +30,9 @@
                         <li class="nav-item border-dark mr-10"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
-            </div> <!-- Navigation End -->
-        </div> <!-- Row Close -->
-    </header> <!-- Header Close-->
+            </div> 
+        </div> 
+    </header> 
 
     <!-- Start Portfolio -->
 
