--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                     <h2 class="mt-2">About me</h2>
                     <hr>
                     <!-- Picture and About me text -->
-                    <div class="row">
+                    <div class="row py-3">
                         <!-- Picture -->
                         <div class="col-md-6 d-flex justify-content-center align-items-center">
                             <!-- <p>Test</p> -->
-                            <img src="./assets/images/.JPG" class="img-fluid rounded-lg" alt="Hilary at the Taj Mahal">
+                            <img src="./assets/images/IMG_20170628_200230.jpg" class="img-fluid rounded-lg border border-dark" alt="Hilary smiling at camera, at the Old North Bridge">
                         </div>
                         <!-- About me text -->
                         <div class="col-md-6">
@@ -69,13 +69,15 @@
     <!-- End About Me -->
 
     <!-- Start Footer -->
-    <footer class="container-fluid fixed-bottom p-0">
+    <div class="footer-margin">
+        <footer class="container-fluid fixed-bottom p-0">
         <div class="row p-2 text-center">
             <div class="col-12">
                 <p class="mb-0">&copy;Copyright</p>
             </div>
         </div>
-    </footer>
+        </footer>
+    </div>
     <!-- End Footer -->
 
     <!-- Optional JavaScript -->
