change to custom button css

--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                             <textarea class="form-control" id="messagetextarea" placeholder="Your message"
                                 rows="6"></textarea>
                         </div>
-                        <button class="btn btn-primary mb-3" type="submit">Send it!</button>
+                        <button class="btn contact-btn mb-3" type="submit">Send it!</button>
                     </form>
                 </div>
             </div>
