add font awesome icons to About me

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     
     <!-- Local CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
+
+    <!-- Font Awesome Kit -->
+    <script src="https://kit.fontawesome.com/32bf735cb4.js" crossorigin="anonymous"></script>
 </head>
 <body class="mb-5">
 
@@ -58,7 +61,20 @@
                                 In 2018, I became a 200-hour registered yoga teacher with Yoga Alliance. I most enjoy guiding new students on their own yoga journey.
                                 </br></br>
                                 When not working or practicing yoga, you will likely find me glued to a book or catching up on the latest royal-watching news.
+                                </br></br>
                             </p>
+                            <!-- Start new row for icons -->
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <i class="fab fa-linkedin fa-3x"></i>
+                                </div>
+                                <div class="col-md-4 d-flex justify-content-center">
+                                    <i class="fab fa-github-square fa-3x"></i>
+                                </div>
+                                <div class="col-md-4 d-flex justify-content-end">
+                                    <i class="fab fa-instagram-square fa-3x"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
