update about me icons to links

--- a/index.html
+++ b/index.html
@@ -65,22 +65,21 @@
                             </p>
                             <!-- Start new row for icons -->
                             <div class="row">
-                                <div class="col-md-4">
-                                    <i class="fab fa-linkedin fa-3x"></i>
+                                <div class="col-md-4 col-sm-2 col-4 d-flex justify-content-center align-items-center">
+                                    <a href="https://www.linkedin.com/in/hferraro/" target="_blank"><i class="btn fab fa-linkedin fa-2x"></i></a>
                                 </div>
-                                <div class="col-md-4 d-flex justify-content-center">
-                                    <i class="fab fa-github-square fa-3x"></i>
+                                <div class="col-md-4 col-sm-2 col-4 d-flex justify-content-center align-items-center">
+                                    <a href="https://github.com/hilbug" target="_blank"><i class="btn fab fa-github-square fa-2x"></i></a>
                                 </div>
-                                <div class="col-md-4 d-flex justify-content-end">
-                                    <i class="fab fa-instagram-square fa-3x"></i>
+                                <div class="col-md-4 col-sm-2 col-4 d-flex justify-content-center align-items-center">
+                                    <a href="https://www.instagram.com/royally.hil/" target="_blank"><i class="btn fab fa-instagram-square fa-2x"></i></a>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- About me ends -->
-            </div>
-        </div>
+                            </div> <!-- Icon row ends -->
+                        </div> <!-- About me text ends -->
+                    </div> <!-- About me and text row ends -->
+                </div> <!-- Header row ends -->
+            </div> <!-- About me row ends -->
+        </div> <!-- About me container ends -->
     </main>
     <!-- End About Me -->
 
