--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                         </li>
                         <li class="nav-item border-right border-dark"><a class="nav-link"
                                 href="portfolio.html">Portfolio</a></li>
-                        <li class="nav-item border-dark mr-10 active"><a class="nav-link"
+                        <li class="nav-item border-dark mr-10"><a class="nav-link active"
                                 href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
