--- a/portfolio.html
+++ b/portfolio.html
@@ -19,14 +19,14 @@
         <div class="row no-gutters">
             <!-- Header Name -->
             <div class="col-md-4">
-                <h1 class="text-center mb-0 border-left border-right border-bottom border-dark">Hilary</h1>
+                <h1 class="text-center mb-0 border-left border-right border-dark">Hilary Ferraro</h1>
             </div>
             <!-- Navigation Start -->
             <div class="col-md-8" role="navigation">
                 <nav class="mb-0">
                     <ul class="nav justify-content-md-end justify-content-center">
                         <li class="nav-item border-right border-dark"><a class="nav-link" href="index.html">About</a></li>
-                        <li class="nav-item border-right border-dark"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                        <li class="nav-item border-right border-dark"><a class="nav-link active" href="portfolio.html">Portfolio</a></li>
                         <li class="nav-item border-dark mr-10"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
