--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
         <div class="container mt-5">
             <div class="row">
-                <div class="col-md-12 contact-bg rounded-lg">
+                <div class="col-md-12 col-lg-8 contact-bg rounded-lg">
                     <h2 class="mt-2">About me</h2>
                     <hr>
                     <!-- Picture and About me text -->
