--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <div class="row no-gutters">
             <!-- Header Name -->
             <div class="col-md-4">
-                <h1 class="text-center mb-0 border-left border-right border-dark">Hilary Ferraro</h1>
+                <h1 class="text-center mb-0 border-left border-right border-dark"><a href="index.html">Hilary Ferraro</a></h1>
             </div>
             <!-- Navigation Start -->
             <div class="col-md-8" role="navigation">
