--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                             </p>
                             <!-- Start new row for icons -->
                             <div class="row">
-                                <div class="col-md-4 col-sm-2 col-4 d-flex justify-content-center align-items-center">
+                                <div class="col-md-4 col-4 d-flex justify-content-center align-items-center">
                                     <a href="https://www.linkedin.com/in/hferraro/" target="_blank" aria-label="Hilary's Linked-In profile"><i class="btn fab fa-linkedin fa-2x"></i></a>
                                 </div>
-                                <div class="col-md-4 col-sm-2 col-4 d-flex justify-content-center align-items-center">
+                                <div class="col-md-4 col-4 d-flex justify-content-center align-items-center">
                                     <a href="https://github.com/hilbug" target="_blank" aria-label="Hilary's Github profile"><i class="btn fab fa-github-square fa-2x"></i></a>
                                 </div>
-                                <div class="col-md-4 col-sm-2 col-4 d-flex justify-content-center align-items-center">
+                                <div class="col-md-4 col-4 d-flex justify-content-center align-items-center">
                                     <a href="https://www.instagram.com/royally.hil/" target="_blank" aria-label="Hilary's Instagram Profile"><i class="btn fab fa-instagram-square fa-2x"></i></a>
                                 </div>
                             </div> <!-- Icon row ends -->
