add portfolio items and update CSS

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Hilary-Portfolio</title>
-    
+
     <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- Local CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body class="mb-5">
     <!-- Header container -->
     <header class="container-fluid p-0 m-0">
@@ -19,39 +22,133 @@
         <div class="row no-gutters">
             <!-- Header Name -->
             <div class="col-md-4">
-                <h1 class="text-center mb-0 border-left border-right border-dark"><a href="index.html">Hilary Ferraro</a></h1>
+                <h1 class="text-center mb-0 border-left border-right border-dark"><a href="index.html">Hilary
+                        Ferraro</a></h1>
             </div>
             <!-- Navigation Start -->
             <div class="col-md-8" role="navigation">
                 <nav class="mb-0">
                     <ul class="nav justify-content-md-end justify-content-center">
-                        <li class="nav-item border-right border-dark"><a class="nav-link" href="index.html">About</a></li>
-                        <li class="nav-item border-right border-dark"><a class="nav-link active" href="portfolio.html">Portfolio</a></li>
+                        <li class="nav-item border-right border-dark"><a class="nav-link" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item border-right border-dark"><a class="nav-link active"
+                                href="portfolio.html">Portfolio</a></li>
                         <li class="nav-item border-dark mr-10"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
-            </div> 
-        </div> 
-    </header> 
+            </div>
+        </div>
+    </header>
 
     <!-- Start Portfolio -->
-
+    <main>
+        <!-- Start Container for Portfolio -->
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-12 col-lg-8 contact-bg rounded-lg">
+                    <h2 class="mt-2">Portfolio</h2>
+                    <hr>
+                    <!-- Portfolio Row -->
+                    <div class="row py-3">
+                        <!-- Portfolio Item 1 -->
+                        <div class="col-md-6 d-flex justify-content-center mb-2">
+                            <div class="card text-dark border border-dark">
+                                <h5 class="portfolio-header w-100 text-center"><a class="contact-bg contact-btn"
+                                        href="https://hilbug.github.io/01-horiseon-code-refactor/">Horiseon Home
+                                        Page</a>
+                                </h5>
+                                <img src="./assets/images/horiseon-refactor.png" class="card-img-top"
+                                    alt="screenshot of Horieson Home Page refactor project">
+                                <div class="card-body pb-1">
+                                    <p class="card-text">The Horiseon Home Page was refactored to:
+                                    <ul>
+                                        <li>meet accessibility standards</li>
+                                        <li>incorporate HTML semantics</li>
+                                        <li>simplify the CSS stylesheet</li>
+                                        <li>improve page performance</li>
+                                    </ul>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item 2 -->
+                        <div class="col-md-6 d-flex justify-content-center mb-2">
+                            <div class="card text-dark border border-dark">
+                                <h5 class="portfolio-header w-100 text-center"><a class="contact-bg contact-btn"
+                                        href="https://scratch.mit.edu/projects/402164061/">Zombie vs Robot</a>
+                                </h5>
+                                <img src="./assets/images/scratch-robot-vs-zombie.png" class="card-img-top"
+                                    alt="screenshot of MIT Scratch Game Zombie vs. Robot">
+                                <div class="card-body pb-1">
+                                    <p class="card-text">Try your hand at catching zombies and gaining lives in my game
+                                        Zombie vs Robot. This game was created using Scratch, a project based at the MIT
+                                        Media Lab. Create stories, games, animations and more!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item 3 -->
+                        <div class="col-md-6 d-flex justify-content-center mb-2">
+                            <div class="card text-dark border border-dark">
+                                <h5 class="portfolio-header w-100 text-center"><a class="contact-bg contact-btn"
+                                        href="#">Project on the way!</a>
+                                </h5>
+                                <img src="./assets/images/scratch-robot-vs-zombie.png" class="card-img-top"
+                                    alt="screenshot of MIT Scratch Game Zombie vs. Robot">
+                                <div class="card-body pb-1">
+                                    <p class="card-text">Try your hand at catching zombies and gaining lives in my game
+                                        Zombie vs Robot. This game was created using Scratch, a project based at the MIT
+                                        Media Lab. Create stories, games, animations and more!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item 4 -->
+                        <div class="col-md-6 d-flex justify-content-center mb-2">
+                            <div class="card text-dark border border-dark">
+                                <h5 class="portfolio-header w-100 text-center"><a class="contact-bg contact-btn"
+                                        href="#">Project on the way!</a>
+                                </h5>
+                                <img src="./assets/images/scratch-robot-vs-zombie.png" class="card-img-top"
+                                    alt="screenshot of MIT Scratch Game Zombie vs. Robot">
+                                <div class="card-body pb-1">
+                                    <p class="card-text">Try your hand at catching zombies and gaining lives in my game
+                                        Zombie vs Robot. This game was created using Scratch, a project based at the MIT
+                                        Media Lab. Create stories, games, animations and more!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div> <!-- Portfolio Row End -->
+                </div>
+            </div> <!-- End Row #1 -->
+        </div> <!-- End Container -->
+    </main>
     <!-- End Portfolio -->
 
     <!-- Start Footer -->
-    <footer class="container-fluid fixed-bottom p-0">
-        <div class="row p-2 text-center">
-            <div class="col-12">
-                <p class="mb-0">&copy;Copyright</p>
+    <div class="footer-margin">
+        <footer class="container-fluid fixed-bottom p-0">
+            <div class="row p-2 text-center">
+                <div class="col-12">
+                    <p class="mb-0">&copy;Copyright</p>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
     <!-- End Footer -->
- 
+
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS --> 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
