--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,12 @@
                 </nav>
             </div>
         </div>
-    </header class="mb-5">
+    </header>
     <main>
         <!-- Start Container for Contact Form -->
         <div class="container mt-5">
             <div class="row">
-                <div class="col-md-8 contact-bg rounded-lg">
+                <div class="col-md-12 col-lg-8 contact-bg rounded-lg">
                     <!-- Contact Form Header -->
                     <h2 class="mt-2">Contact me</h2>
                     <hr>
