update project placeholder

--- a/portfolio.html
+++ b/portfolio.html
@@ -93,12 +93,10 @@
                                 <h5 class="portfolio-header w-100 text-center"><a class="contact-bg contact-btn"
                                         href="#">Project on the way!</a>
                                 </h5>
-                                <img src="./assets/images/scratch-robot-vs-zombie.png" class="card-img-top"
+                                <img src="./assets/images/20170512_185018.jpg" class="card-img-top"
                                     alt="screenshot of MIT Scratch Game Zombie vs. Robot">
                                 <div class="card-body pb-1">
-                                    <p class="card-text">Try your hand at catching zombies and gaining lives in my game
-                                        Zombie vs Robot. This game was created using Scratch, a project based at the MIT
-                                        Media Lab. Create stories, games, animations and more!
+                                    <p class="card-text">This is a placeholder for a future project. Check back soon!
                                     </p>
                                 </div>
                             </div>
@@ -109,12 +107,10 @@
                                 <h5 class="portfolio-header w-100 text-center"><a class="contact-bg contact-btn"
                                         href="#">Project on the way!</a>
                                 </h5>
-                                <img src="./assets/images/scratch-robot-vs-zombie.png" class="card-img-top"
+                                <img src="./assets/images/20170512_185018.jpg" class="card-img-top"
                                     alt="screenshot of MIT Scratch Game Zombie vs. Robot">
                                 <div class="card-body pb-1">
-                                    <p class="card-text">Try your hand at catching zombies and gaining lives in my game
-                                        Zombie vs Robot. This game was created using Scratch, a project based at the MIT
-                                        Media Lab. Create stories, games, animations and more!
+                                    <p class="card-text">This is a placeholder for a future project. Check back soon!
                                     </p>
                                 </div>
                             </div>
