portfolio error close p before ul

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,14 +60,13 @@
                                 <img src="./assets/images/horiseon-refactor.png" class="card-img-top"
                                     alt="screenshot of Horieson Home Page refactor project">
                                 <div class="card-body pb-1">
-                                    <p class="card-text">The Horiseon Home Page was refactored to:
-                                    <ul>
-                                        <li>meet accessibility standards</li>
-                                        <li>incorporate HTML semantics</li>
-                                        <li>simplify the CSS stylesheet</li>
-                                        <li>improve page performance</li>
-                                    </ul>
-                                    </p>
+                                    <p class="card-text">The Horiseon Home Page was refactored to:</p>
+                                        <ul>
+                                            <li>meet accessibility standards</li>
+                                            <li>incorporate HTML semantics</li>
+                                            <li>simplify the CSS stylesheet</li>
+                                            <li>improve page performance</li>
+                                        </ul>
                                 </div>
                             </div>
                         </div>
